2 Kursas 2 pusė/Programavimo kalbų teorija/CMatch programavimo kalba/CMatch/obj/Debug/net6.0/CMatchParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\Labas\Desktop\Cmatch aruno\CMatch\CMatch\Content\CMatch.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace CMatch.Content {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class CMatchParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, BOOL_OP=47, INTEGER=48, TOUPLE=49, DOUBLE=50, STRING=51, BOOL=52, 
		NULL=53, POSITIVE=54, WS=55, IDENTIFIER=56;
	public const int
		RULE_program = 0, RULE_line = 1, RULE_statement = 2, RULE_statementif = 3, 
		RULE_statmentelseif = 4, RULE_statementfor = 5, RULE_statmentmatch = 6, 
		RULE_identifierPattern = 7, RULE_primaryPattern = 8, RULE_pattern = 9, 
		RULE_assigment = 10, RULE_functionCall = 11, RULE_functionalCall = 12, 
		RULE_expressionList = 13, RULE_functionDeclare = 14, RULE_parameterList = 15, 
		RULE_returnStatement = 16, RULE_expression = 17, RULE_multOp = 18, RULE_addOp = 19, 
		RULE_compareOp = 20, RULE_boolOp = 21, RULE_constant = 22, RULE_block = 23, 
		RULE_constantPattern = 24, RULE_decimalNumbersTail = 25, RULE_decimalNumbersHead = 26, 
		RULE_touplePattern = 27, RULE_wildcardPattern = 28;
	public static readonly string[] ruleNames = {
		"program", "line", "statement", "statementif", "statmentelseif", "statementfor", 
		"statmentmatch", "identifierPattern", "primaryPattern", "pattern", "assigment", 
		"functionCall", "functionalCall", "expressionList", "functionDeclare", 
		"parameterList", "returnStatement", "expression", "multOp", "addOp", "compareOp", 
		"boolOp", "constant", "block", "constantPattern", "decimalNumbersTail", 
		"decimalNumbersHead", "touplePattern", "wildcardPattern"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'if'", "'('", "')'", "'or'", "'for'", "'{'", "'}'", "'match'", 
		"'case'", "':'", "'when'", "'='", "','", "'func'", "'return'", "'!'", 
		"'*'", "'/'", "'%'", "'+'", "'-'", "'=='", "'!='", "'>'", "'<'", "'>='", 
		"'<='", "'constint'", "'conststring'", "'constdouble'", "'constbool'", 
		"'#.'", "'##.'", "'###.'", "'####.'", "'-#.'", "'-##.'", "'-###.'", "'-####.'", 
		"'.#'", "'.##'", "'.###'", "'.####'", "'#'", "'_'", null, null, null, 
		null, null, null, "'Null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "BOOL_OP", 
		"INTEGER", "TOUPLE", "DOUBLE", "STRING", "BOOL", "NULL", "POSITIVE", "WS", 
		"IDENTIFIER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CMatch.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public CMatchParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(CMatchParser.Eof, 0); }
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICMatchVisitor<TResult> typedVisitor = visitor as ICMatchVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 61;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__5) | (1L << T__8) | (1L << T__14) | (1L << T__15) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				State = 58; line();
				}
				}
				State = 63;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 64; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public StatementifContext statementif() {
			return GetRuleContext<StatementifContext>(0);
		}
		public StatementforContext statementfor() {
			return GetRuleContext<StatementforContext>(0);
		}
		public StatmentmatchContext statmentmatch() {
			return GetRuleContext<StatmentmatchContext>(0);
		}
		public FunctionDeclareContext functionDeclare() {
			return GetRuleContext<FunctionDeclareContext>(0);
		}
		public FunctionalCallContext functionalCall() {
			return GetRuleContext<FunctionalCallContext>(0);
		}
		public ReturnStatementContext returnStatement() {
			return GetRuleContext<ReturnStatementContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICMatchVisitor<TResult> typedVisitor = visitor as ICMatchVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_line);
		try {
			State = 73;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 66; statement();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 67; statementif();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 68; statementfor();
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 69; statmentmatch();
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 70; functionDeclare();
				}
				break;

			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 71; functionalCall();
				}
				break;

			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 72; returnStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public AssigmentContext assigment() {
			return GetRuleContext<AssigmentContext>(0);
		}
		public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICMatchVisitor<TResult> typedVisitor = visitor as ICMatchVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				State = 75; assigment();
				}
				break;

			case 2:
				{
				State = 76; functionCall();
				}
				break;
			}
			State = 79; Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementifContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public StatmentelseifContext statmentelseif() {
			return GetRuleContext<StatmentelseifContext>(0);
		}
		public StatementifContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statementif; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.EnterStatementif(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.ExitStatementif(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICMatchVisitor<TResult> typedVisitor = visitor as ICMatchVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementif(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementifContext statementif() {
		StatementifContext _localctx = new StatementifContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_statementif);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81; Match(T__1);
			State = 82; Match(T__2);
			State = 83; expression(0);
			State = 84; Match(T__3);
			State = 85; block();
			State = 88;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				State = 86; Match(T__4);
				State = 87; statmentelseif();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatmentelseifContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public StatementifContext statementif() {
			return GetRuleContext<StatementifContext>(0);
		}
		public StatmentelseifContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statmentelseif; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.EnterStatmentelseif(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.ExitStatmentelseif(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICMatchVisitor<TResult> typedVisitor = visitor as ICMatchVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatmentelseif(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatmentelseifContext statmentelseif() {
		StatmentelseifContext _localctx = new StatmentelseifContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_statmentelseif);
		try {
			State = 92;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case T__6:
				EnterOuterAlt(_localctx, 1);
				{
				State = 90; block();
				}
				break;
			case T__1:
				EnterOuterAlt(_localctx, 2);
				{
				State = 91; statementif();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementforContext : ParserRuleContext {
		public AssigmentContext[] assigment() {
			return GetRuleContexts<AssigmentContext>();
		}
		public AssigmentContext assigment(int i) {
			return GetRuleContext<AssigmentContext>(i);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public StatementforContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statementfor; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.EnterStatementfor(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.ExitStatementfor(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICMatchVisitor<TResult> typedVisitor = visitor as ICMatchVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementfor(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementforContext statementfor() {
		StatementforContext _localctx = new StatementforContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_statementfor);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94; Match(T__5);
			State = 95; Match(T__2);
			State = 96; assigment();
			State = 97; Match(T__0);
			State = 98; expression(0);
			State = 99; Match(T__0);
			State = 100; assigment();
			State = 101; Match(T__3);
			State = 102; Match(T__6);
			State = 103; block();
			State = 104; Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatmentmatchContext : ParserRuleContext {
		public IdentifierPatternContext identifierPattern() {
			return GetRuleContext<IdentifierPatternContext>(0);
		}
		public PatternContext[] pattern() {
			return GetRuleContexts<PatternContext>();
		}
		public PatternContext pattern(int i) {
			return GetRuleContext<PatternContext>(i);
		}
		public BlockContext[] block() {
			return GetRuleContexts<BlockContext>();
		}
		public BlockContext block(int i) {
			return GetRuleContext<BlockContext>(i);
		}
		public StatmentmatchContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statmentmatch; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.EnterStatmentmatch(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.ExitStatmentmatch(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICMatchVisitor<TResult> typedVisitor = visitor as ICMatchVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatmentmatch(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatmentmatchContext statmentmatch() {
		StatmentmatchContext _localctx = new StatmentmatchContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_statmentmatch);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106; Match(T__8);
			State = 107; Match(T__2);
			State = 108; identifierPattern();
			State = 109; Match(T__3);
			State = 110; Match(T__6);
			State = 118;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 111; Match(T__9);
				State = 112; pattern();
				State = 113; Match(T__10);
				State = 114; Match(T__6);
				State = 115; block();
				State = 116; Match(T__7);
				}
				}
				State = 120;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==T__9 );
			State = 122; Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdentifierPatternContext : ParserRuleContext {
		public ConstantContext constant() {
			return GetRuleContext<ConstantContext>(0);
		}
		public ITerminalNode IDENTIFIER() { return GetToken(CMatchParser.IDENTIFIER, 0); }
		public IdentifierPatternContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_identifierPattern; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.EnterIdentifierPattern(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.ExitIdentifierPattern(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICMatchVisitor<TResult> typedVisitor = visitor as ICMatchVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifierPattern(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdentifierPatternContext identifierPattern() {
		IdentifierPatternContext _localctx = new IdentifierPatternContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_identifierPattern);
		try {
			State = 126;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case INTEGER:
			case TOUPLE:
			case DOUBLE:
			case STRING:
			case BOOL:
			case NULL:
				EnterOuterAlt(_localctx, 1);
				{
				State = 124; constant();
				}
				break;
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 2);
				{
				State = 125; Match(IDENTIFIER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrimaryPatternContext : ParserRuleContext {
		public DecimalNumbersHeadContext decimalNumbersHead() {
			return GetRuleContext<DecimalNumbersHeadContext>(0);
		}
		public DecimalNumbersTailContext decimalNumbersTail() {
			return GetRuleContext<DecimalNumbersTailContext>(0);
		}
		public TouplePatternContext touplePattern() {
			return GetRuleContext<TouplePatternContext>(0);
		}
		public ConstantPatternContext constantPattern() {
			return GetRuleContext<ConstantPatternContext>(0);
		}
		public WildcardPatternContext wildcardPattern() {
			return GetRuleContext<WildcardPatternContext>(0);
		}
		public PrimaryPatternContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_primaryPattern; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.EnterPrimaryPattern(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.ExitPrimaryPattern(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICMatchVisitor<TResult> typedVisitor = visitor as ICMatchVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrimaryPattern(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrimaryPatternContext primaryPattern() {
		PrimaryPatternContext _localctx = new PrimaryPatternContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_primaryPattern);
		try {
			State = 133;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,7,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 128; decimalNumbersHead();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 129; decimalNumbersTail();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 130; touplePattern();
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 131; constantPattern();
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 132; wildcardPattern();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PatternContext : ParserRuleContext {
		public PrimaryPatternContext primaryPattern() {
			return GetRuleContext<PrimaryPatternContext>(0);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public PatternContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pattern; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.EnterPattern(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.ExitPattern(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICMatchVisitor<TResult> typedVisitor = visitor as ICMatchVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPattern(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PatternContext pattern() {
		PatternContext _localctx = new PatternContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_pattern);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 135; primaryPattern();
			State = 138;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__11) {
				{
				State = 136; Match(T__11);
				State = 137; expression(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssigmentContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(CMatchParser.IDENTIFIER, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public AssigmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assigment; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.EnterAssigment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICMatchListener typedListener = listener as ICMatchListener;
			if (typedListener != null) typedListener.ExitAssigment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICMatchVisitor<TResult> typedVisitor = visitor as ICMatchVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssigment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssigmentContext assigment() {
		AssigmentContext _localctx = new AssigmentContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_assigment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 140; Match(IDENTIFIER);
			State = 141; Match(T__12);
			State = 142; expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
